; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/btc/profile/std/hf_ag/extr_btc_hf_ag.c_btc_hf_indchange_notification.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/btc/profile/std/hf_ag/extr_btc_hf_ag.c_btc_hf_indchange_notification.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BTA_AG_IND_CALL = common dso_local global i32 0, align 4
@BTA_AG_IND_CALLSETUP = common dso_local global i32 0, align 4
@BTA_AG_IND_SERVICE = common dso_local global i32 0, align 4
@BTA_AG_IND_SIGNAL = common dso_local global i32 0, align 4
@BT_STATUS_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32, i32, i32)* @btc_hf_indchange_notification to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @btc_hf_indchange_notification(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %13 = load i32*, i32** %7, align 8
  %14 = call i32 @btc_hf_idx_by_bdaddr(i32* %13)
  store i32 %14, i32* %12, align 4
  %15 = call i32 (...) @CHECK_HF_INIT()
  %16 = load i32*, i32** %7, align 8
  %17 = call i64 @is_connected(i32* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %33

19:                                               ; preds = %5
  %20 = load i32, i32* @BTA_AG_IND_CALL, align 4
  %21 = load i32, i32* %8, align 4
  %22 = call i32 @send_indicator_update(i32 %20, i32 %21)
  %23 = load i32, i32* @BTA_AG_IND_CALLSETUP, align 4
  %24 = load i32, i32* %9, align 4
  %25 = call i32 @send_indicator_update(i32 %23, i32 %24)
  %26 = load i32, i32* @BTA_AG_IND_SERVICE, align 4
  %27 = load i32, i32* %10, align 4
  %28 = call i32 @send_indicator_update(i32 %26, i32 %27)
  %29 = load i32, i32* @BTA_AG_IND_SIGNAL, align 4
  %30 = load i32, i32* %11, align 4
  %31 = call i32 @send_indicator_update(i32 %29, i32 %30)
  %32 = load i32, i32* @BT_STATUS_SUCCESS, align 4
  store i32 %32, i32* %6, align 4
  br label %35

33:                                               ; preds = %5
  %34 = load i32, i32* @BT_STATUS_SUCCESS, align 4
  store i32 %34, i32* %6, align 4
  br label %35

35:                                               ; preds = %33, %19
  %36 = load i32, i32* %6, align 4
  ret i32 %36
}

declare dso_local i32 @btc_hf_idx_by_bdaddr(i32*) #1

declare dso_local i32 @CHECK_HF_INIT(...) #1

declare dso_local i64 @is_connected(i32*) #1

declare dso_local i32 @send_indicator_update(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
